# spieks

./: .gitignore  README.md  pyproject.toml
examples/: test_ann2snn.ipynb  test_mnist.ipynb  test_spike_trace.ipynb  training.py
spieks/: learning.py  network.py  neurons.py  simulator.py  utils.py
spieks/ann/: neurons.py  training.py
spieks/network/: __init__.py  converter.py  spiking_network.py
