[project]
name = "spieks"
version = "0.0.1"
description = "A library for simulating SNNs"
readme = "README.md"
authors = [{ name = "Liam Bury" }]
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
classifiers = ["License :: OSI Approved :: Apache Software License"]
dependencies = [
	"torch>=2.5.1",
	"torchaudio>=2.5.1",
	"torchvision>=0.20.1",
	"tqdm>=4.67.1"
]
